# abllib

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CODE_STYLE.md  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: define-mypy.yml  define-pylint.yml  define-pytest.yml  release_package.yml  remove-merge-label.yml  run-tests-on-labeled.yml  run-tests-on-review.yml  run-tests.yml
src/: main.py
src/abllib/: __init__.py  enum.py  general.py  log.py  onexit.py  storage.py
src/abllib/_storage/: __init__.py  _base_storage.py  _internal_storage.py
src/abllib/alg/: __init__.py  _levenshtein.py  levenshtein.py
src/abllib/error/: __init__.py  _custom_exception.py  _general.py  _wrong_type_error.py  error.py  general.py  wrong_type_error.py
src/abllib/fs/: __init__.py  filename.py  path.py
src/abllib/fuzzy/: __init__.py  _all.py  _closest.py  _matches.py  _matchresult.py  _similarity.py  fuzzy_search.py  match.py  search.py
src/abllib/pproc/: __init__.py  _testable_thread.py  _worker_process.py  _worker_thread.py
src/abllib/storage/: __init__.py  _base_storage.py  _cache_storage.py  _internal_storage.py  _persistent_storage.py  _storage_view.py  _threadsafe_storage.py  _volatile_storage.py
src/abllib/thread/: __init__.py  _testable_thread.py  (+3 more)
src/test/: alg_test.py  conftest.py  enum_test.py  error_test.py  fixtures.py  fs_test.py  fuzzy_test.py  general_test.py  general_test.py.disabled  i_storage_test.py  log_test.py  mypy_test.py  onexit_test.py  pproc_test.py  pylint_test.py  pytest.ini  storage_test.py  thread_test.py  types_test.py  wrapper_deprecation_test.py  wrapper_test.py
(+12 files in other folders)
