[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "abllib"
authors = [
  { name="Ableytner", email="ableytner@gmx.at" },
]
description = "Ableytners' general-purpose python library, usable across various projects."
readme = "README.md"
license = "GPL-3.0"
license-files = [
    "LICENSE",
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
  "dill",
  "numpy"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pylint",
    "pytest",
]

[project.urls]
Repository = "https://github.com/Ableytner/abllib"
Issues = "https://github.com/Ableytner/abllib/issues"

[tool.setuptools.dynamic]
version = {attr = "abllib.__version__"}
